--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit" />
+    <script>
+      var current_editor;
+    </script>
     <script
       type="text/javascript"
       charset="utf-8"
